RESOLVED FIXED288615
[text-wrap-style:pretty] line break sometimes causes crash loop.
https://bugs.webkit.org/show_bug.cgi?id=288615
Summary [text-wrap-style:pretty] line break sometimes causes crash loop.
Yulun Wu
Reported 2025-02-26 09:53:53 PST
Attachments
Yulun Wu
Comment 1 2025-02-28 11:10:07 PST
EWS
Comment 2 2025-02-28 16:43:30 PST
Committed 291401@main (12e2a141d2c2): <https://commits.webkit.org/291401@main> Reviewed commits have been landed. Closing PR #41639 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.