[text-wrap-style:pretty] track index of last valid state instead of breakpoint. https://bugs.webkit.org/show_bug.cgi?id=288615 <rdar://145669941>

Reviewed by Alan Baradlay.

InlineContentConstrainer::prettifyRange() should track the lastValidStateindex
instead of the lastValidBreakpoint. We were writting the EntryPretty from
layoutSingleLineForPretty() to the incorrect place in state[]. This was causing
an index out of bounds exception in the attached test case.

Canonical link: https://commits.webkit.org/291401@main